Aplikacja/Deployment/Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-apps
  labels:
    name: frontend-apps
