Aplikacja/Deployment/Kubernetes/angular-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: oto-auto-angular-deployment
  namespace: frontend-apps
  labels:
    app: oto-moto-angular

spec:
  replicas: 1
  selector:
    matchLabels:
      app: oto-auto-angular
  template:
    metadata:
      labels:
        app: oto-auto-angular
    spec:
      containers:
        - name: oto-auto-angular
          image: tloku/oto-auto-angular:v.1.0.1
          ports:
          - containerPort: 80

---

apiVersion: v1

kind: Service

metadata:
  name: oto-auto-angular-service
  namespace: frontend-apps

spec:
  selector:
    app: oto-auto-angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


---

apiVersion: v1

kind: Service

metadata:
  name: oto-auto-angular-load-balancer
  namespace: frontend-apps

spec:
  type: LoadBalancer
  selector:
    app: oto-auto-angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
